--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,13 @@
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+    <!--  -->
+    <meta name="google-signin-scope" content="profile email" />
+    <meta
+      name="google-signin-client_id"
+      content="785344539141-g44ha0j7cho1h1t7svpc7u4a7tkktot6.apps.googleusercontent.com"
+    />
   </head>
 
   <body>
